# study-guide-agent

./: .funcignore  README.md  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
.github/workflows/: master_study-guide-mcp.yml
config/: guidelines.md
docs/: MANUAL_STEPS.md
mcp_server/: __init__.py  function_app.py  local.settings.json.example  requirements.txt
mcp_server/tools/: __init__.py  canvas_tools_handler.py
runtime_storage/azure/config/: study-guide-template.md
study_guide_agent/: __init__.py  __main__.py  models.py  runner.py
study_guide_agent/orchestrators/: __init__.py  azure_openai.py  azure_openai_client.py  foundry.py  foundry_client.py  gemini.py  protocol.py
study_guide_agent/storage/: __init__.py  azure_blob.py  gcs.py
study_guide_agent/tools/: __init__.py  canvas_tools.py  openai_schemas.py
tests/: test_azure_openai_client.py  test_azure_openai_orchestrator.py  test_canvas_tools.py  test_canvas_tools_full.py  test_factory_selection.py  test_foundry_client.py  test_foundry_factory.py  test_foundry_orchestrator.py  test_gemini_orchestrator.py  test_mcp_canvas_tools_handler.py  test_openai_schemas.py  test_runner.py  test_storage_strategies.py
